--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,15 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+typer = {extras = ["all"], version = "^0.6.1"}
 
 [tool.poetry.dev-dependencies]
+pydocstyle = "^6.1.1"
+black = "^22.8.0"
+mypy = "^0.971"
+flake8 = "^5.0.4"
+isort = "^5.10.1"
+pytest = "^7.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
