--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Setup Poetry Package Manager
-        uses: abatillo/actions-poetry@2.1.6
+        uses: abatillo/actions-poetry@v2.1.6
         with:
           poetry-version: ${{ matrix.poetry-version }}
 
