created a temporary hack to check the CI/CD pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,12 @@
 name: Build & Publish to PyPi
 
 on:
-  release:
-    types:
-      - created
+  push:
+    branches:
+      - "main"
+  # release:
+  #   types:
+  #     - created
 
 jobs:
   publish:
