created a temporary hack to check the CI/CD pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,9 @@
 name: Build & Publish to PyPi
 
 on:
-  push:
-    branches:
-      - "main"
-  # release:
-  #   types:
-  #     - created
+  release:
+    types:
+      - created
 
 jobs:
   publish:
