--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ jefer = "jefer.main:app"
 [tool.poetry.dependencies]
 python = "^3.10"
 typer = {extras = ["all"], version = "^0.6.1"}
+furo = "^2022.9.15"
 
 [tool.poetry.dev-dependencies]
 pydocstyle = "^6.1.1"
@@ -20,6 +21,9 @@ mypy = "^0.971"
 flake8 = "^5.0.4"
 isort = "^5.10.1"
 pytest = "^7.1.3"
+
+[tools.isort]
+profile = "black"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
