update the MkDocs configuration to build the social cards as well

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -70,6 +70,6 @@ copyright: >
 plugins:
   - search
   # FIXME: The plugins don't install on Vercel for whatever reason, hence breaking the pipeline.
-  # - social:
-  #     cards: true
-  #     cards_dir: assets/images/social
+  - social:
+      cards: true
+      cards_dir: assets/images/social
