--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -73,5 +73,8 @@ tasks:
       This task will install all the dev dependencies of the project to develop it
       further. Use this task after invoking virtual environment creation task & before
       starting the development work on the project.
+    run: once
+    sources:
+      - poetry.lock
     cmds:
       - poetry install --no-root
