--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest = "^7.1.3"
 mkdocs-material = "^8.5.3"
 Pillow = "^9.2.0"
 CairoSVG = "^2.5.2"
+toml = "^0.10.2"
 
 [tools.isort]
 profile = "black"
