--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -12,6 +12,7 @@ jobs:
       fail-fast: true
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        python-version: ["3.10"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
@@ -19,6 +20,8 @@ jobs:
 
       - name: Setup Python in the runtime.
         uses: actions/setup-python@v4.2.0
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - name: Install Pytest
         run: pip install pytest
