disable trailing slash on Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "public": true,
   "cleanUrls": true,
+  "trailingSlash": false,
   "github": {
     "silent": true,
     "autoJobCancelation": true
