enable caching capabilities in the GH workflows

--- a/.github/workflows/qa-check.yml
+++ b/.github/workflows/qa-check.yml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Setup Python in the runtime.
         uses: actions/setup-python@v4.3.0
+        with:
+          cache: "pip"
 
       - name: Install linters & formatters
         run: pip install black flake8 isort pydocstyle toml
