--- a/.github/workflows/qa-check.yml
+++ b/.github/workflows/qa-check.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Python in the runtime.
         uses: actions/setup-python@v4.3.0
         with:
-          cache: "pip"
+          cache: "poetry"
 
       - name: Install linters & formatters
         run: pip install black flake8 isort pydocstyle toml
