--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ Pillow = "^9.3.0"
 CairoSVG = "^2.5.2"
 toml = "^0.10.2"
 
+[tool.poetry.group.dev.dependencies]
+homebrew-pypi-poet = "^0.10.0"
+
 [tools.isort]
 profile = "black"
 
